# mkqr

./: README.md  index.html  mkqr.md  mkqr_logo.psd
API/: CMakeLists.txt  README.md  mkqr_api.sln  mkqr_doxyfile
API/Catch2Test/: CMakeLists.txt  Catch2.hpp  main.cpp  test.vcxproj  test.vcxproj.filters
API/cppexample/: main.cpp  test.vcxproj
API/docs/: _navbar.md  config.json  index.html  index_classes.md  index_examples.md  index_files.md  index_groups.md  index_namespaces.md  index_pages.md  mkqr_doxyfile  readme.md
API/docs/Classes/: README.md  class_m_k_q_r_1_1_generator.md  class_m_k_q_r_1_1_validator.md  classqrcodegen_1_1_bit_buffer.md  classqrcodegen_1_1_qr_code.md  classqrcodegen_1_1_qr_segment.md  classqrcodegen_1_1_qr_segment_1_1_mode.md  classqrcodegen_1_1data__too__long.md  struct_m_k_q_r_1_1_validator_1_1_s_result.md
API/docs/Examples/: README.md
API/docs/Files/: README.md  dir_7a4743c6d98667c9466b65002521998f.md  logo_8h.md  mkqr__generator_8cpp.md  mkqr__generator_8h.md  mkqr__validator_8cpp.md  mkqr__validator_8h.md  mkqrapi_8cpp.md  mkqrapi_8h.md  qrcodegen_8cpp.md  qrcodegen_8h.md
API/docs/Modules/: README.md
API/docs/Namespaces/: README.md  namespace_m_k_q_r.md  namespaceqrcodegen.md  namespacestd.md
API/docs/Pages/: README.md
API/docs/html/: annotated.html  class_m_k_q_r_1_1_generator-members.html  class_m_k_q_r_1_1_generator.html  class_m_k_q_r_1_1_validator-members.html  class_m_k_q_r_1_1_validator.html  classes.html  classqrcodegen_1_1_bit_buffer-members.html  classqrcodegen_1_1_bit_buffer.html  classqrcodegen_1_1_qr_code-members.html  classqrcodegen_1_1_qr_code.html  classqrcodegen_1_1_qr_segment-members.html  classqrcodegen_1_1_qr_segment.html  classqrcodegen_1_1_qr_segment_1_1_mode-members.html  classqrcodegen_1_1_qr_segment_1_1_mode.html  classqrcodegen_1_1data__too__long-members.html  classqrcodegen_1_1data__too__long.html  dir_7a4743c6d98667c9466b65002521998f.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  hierarchy.html  index.html  logo_8h.html  logo_8h_source.html  menudata.js  mkqr__generator_8cpp.html  mkqr__generator_8h.html  mkqr__generator_8h_source.html  mkqr__validator_8h.html  mkqr__validator_8h_source.html  mkqrapi_8cpp.html  mkqrapi_8h.html  mkqrapi_8h_source.html  namespace_m_k_q_r.html  (+5 more)
API/docs/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_3.js  all_4.js  all_6.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_5.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_d.js  (+15 more)
API/docs/xml/: Doxyfile.xml  class_m_k_q_r_1_1_generator.xml  class_m_k_q_r_1_1_validator.xml  classqrcodegen_1_1_bit_buffer.xml  classqrcodegen_1_1_qr_code.xml  classqrcodegen_1_1_qr_segment.xml  classqrcodegen_1_1_qr_segment_1_1_mode.xml  classqrcodegen_1_1data__too__long.xml  dir_7a4743c6d98667c9466b65002521998f.xml  index.xml  logo_8h.xml  mkqr__generator_8cpp.xml  mkqr__generator_8h.xml  mkqr__validator_8cpp.xml  mkqr__validator_8h.xml  mkqrapi_8cpp.xml  mkqrapi_8h.xml  namespace_m_k_q_r.xml  namespaceqrcodegen.xml  qrcodegen_8cpp.xml  qrcodegen_8h.xml  struct_m_k_q_r_1_1_validator_1_1_s_result.xml
API/mkqr_api/: CMakeLists.txt  logo.h  mkqr_api.vcxproj  mkqr_api.vcxproj.filters  mkqr_generator.cpp  mkqr_generator.h  mkqr_validator.cpp  mkqr_validator.h  mkqrapi.cpp  mkqrapi.h  qrcodegen.cpp  qrcodegen.h
API/wpfexample/: MainWindow.xaml.cs
API/wpfexample/Properties/: AssemblyInfo.cs
Examples/WPF/: .gitignore  App.xaml  MainWindow.xaml  MainWindow.xaml.cs  README.md  wpfexample.csproj
Examples/WPF/Properties/: Resources.Designer.cs
